# python-whatsapp-bot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pythonpublish.yml
bot_whatsapp/: bot.py  constants.py  filters.py  handler.py  models.py
examples/: .env.example  echo_bot.py
examples/audio-writer/: README.md  audio-writer.py  pyproject.toml
