[tool.poetry]
name = "bot-whatsapp"
version = "0.0.6"
description = "python-telegram-bot for WhatsApp"
authors = ["piEsposito <piero.skywalker@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.7.3"
requests = "^2.32.3"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
aiohttp = "^3.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
